--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,15 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+p{
+  margin: 0;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+:root {
+  --primary-color: #B92B5D;
+  --light-bg: #F3F3E9;
+  --dark-text: #373052;
 }
